# cookiecutter-eventsourcing

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements_dev.txt
.github/workflows/: github-actions.yml
hooks/: pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/workflows/: github-actions.yml
{{cookiecutter.project_slug}}/tests/: test_application.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: application.py  domainmodel.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: application.py
